background color change

--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
+<div class="wrapper">
     <div class="text">
         <h1>Það eru</h1>
         <h1 id="timer"></h1>
         <h1>til Jóla!</h1>
     </div>
-    <script type="text/javascript" src="script.js"></script>
+</div>
+<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
