--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <meta charset="UTF-8">
     <title>Jól</title>
-    <link rel="stylesheet" type="text/css" href="style.css"/>
-</head>
-<body>
-<div class="wrapper">
-    <div class="text">
-        <h1>Það eru</h1>
-        <h1 id="timer"></h1>
-        <h1>til Jóla!</h1>
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
+  </head>
+  <body>
+    <div id="particles-js">
+      <div class="wrapper">
+        <div class="text">
+          <h1>Það eru</h1>
+          <h1 id="timer"></h1>
+          <h1>til Jóla!</h1>
+        </div>
+      </div>
     </div>
-</div>
-<script type="text/javascript" src="script.js"></script>
-</body>
+    <script type="text/javascript" src="js/particles.min.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
+  </body>
 </html>
