--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
         </div>
       </div>
     </div>
-    <script type="text/javascript" src="js/particles.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="js/particles.min.js"></script>
+    <script>
+      particlesJS.load('particles-js', 'assets/particles.json');
+    </script>
   </body>
 </html>
