Fix styling and text.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <div id="particles-js">
       <div class="wrapper">
         <div class="text">
-          <h1 id="text1">Það eru</h1>
+          <h1 id="text1"></h1>
           <h1 id="timer"></h1>
-          <h1 id="text2">til Jóla!</h1>
+          <h1 id="text2"></h1>
         </div>
       </div>
     </div>
