--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
   </head>
   <body>
-    <div id="particles-js">
+    <div id="particles-js" class="full-height">
       <div class="wrapper">
         <div class="text">
           <h1 id="text1"></h1>
