--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
   </head>
   <body>
-    <div class="full-height">
-      <div id="particles-js">
-        <div class="wrapper">
-          <div class="text">
-            <h1 id="text1"></h1>
-            <h1 id="timer"></h1>
-            <h1 id="text2"></h1>
-          </div>
+    <div id="particles-js" class="full-height">
+      <div class="wrapper">
+        <div class="text">
+          <h1 id="text1"></h1>
+          <h1 id="timer"></h1>
+          <h1 id="text2"></h1>
         </div>
       </div>
     </div>
